# sj-ai-factory

./: .gitignore  pyproject.toml  rl_factory_main.py
logs/: 0529_193930-stock.xlsx  0529_193932-scalar.xlsx  0529_194110-stock.xlsx  0529_194112-scalar.xlsx  0529_194251-stock.xlsx  0529_194252-scalar.xlsx  0529_194534-stock.xlsx  0529_194535-scalar.xlsx  0529_194707-stock.xlsx  0529_194711-scalar.xlsx  0529_194849-scalar.xlsx  0529_194849-stock.xlsx  0529_195143-stock.xlsx  0529_195144-scalar.xlsx  0529_195346-stock.xlsx  0529_195347-scalar.xlsx  0529_195352-scalar.xlsx  0529_195352-stock.xlsx  0529_195358-scalar.xlsx  0529_195358-stock.xlsx  0529_195409-scalar.xlsx  0529_195409-stock.xlsx  0529_195416-scalar.xlsx  0529_195416-stock.xlsx  0529_195457-scalar.xlsx  0529_195457-stock.xlsx  0529_200132-stock.xlsx  0529_200133-scalar.xlsx  0529_200144-scalar.xlsx  0529_200144-stock.xlsx  0529_200159-scalar.xlsx  0529_200159-stock.xlsx  0529_200211-scalar.xlsx  0529_200211-stock.xlsx  0529_200226-scalar.xlsx  0529_200226-stock.xlsx  0529_200238-scalar.xlsx  0529_200238-stock.xlsx  0529_200254-scalar.xlsx  0529_200254-stock.xlsx  (+278 more)
pycode/: CFG.py  OrderManagerRuntime.py  PriceManagerRuntime.py  Scheduler.py  StockManagerRuntime.py  data_class.py  dev_runtime.py  factory_env.py  factory_sim.py  history_recorder.py  main_entry.py  make_my_plots.py  make_plot.py  rl_factory_main.py  utils.py
spec_yaml/: device.yaml  init_bind_of_device_and_recipe.yaml  init_money.yaml  init_order.yaml  init_price.yaml  init_stock.yaml  recipes.yaml  stock.yaml
