[project]
name = "a009-sj-rl-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "gymnasium[classic-control]>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruamel-yaml>=0.18.10",
    "sb3-contrib>=2.6.0",
    "tensorboard>=2.19.0",
]
